.deploy/service_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT_NAME}-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: ${DEPLOYMENT_NAME}
